fix stretch menu on large screen

--- a/assets/css/g_goncha.css
+++ b/assets/css/g_goncha.css
@@ -260,6 +260,7 @@ body.opened-full-nav .header .btn.menu-close{position:absolute;top:60px;right:60
 .section-title.line-title-0509{color:#fff}
 .section-title.large{font-size:5.625rem;line-height:1.111;}
 .section-title.medium{font-size:4rem;line-height: 1.20;letter-spacing: -.08rem;}
+.menu-wrapper{z-index: -1;}
 .section-title.small{font-size:3.375rem;line-height: 1.24;letter-spacing: -.068rem;}
 .text-label{font-weight: 500;line-height: 1.625;letter-spacing:.3rem;color: #db5166; text-transform: uppercase;}  
 /* 추가 : 2022.05.09 배경이미지 변경으로 인한 글짜 색상 변경   */
@@ -977,8 +978,8 @@ td[data-column="status"]{color:#db5166;}
 }
 
 @media (min-width:1024px){
-	#content.home .section.store .bg-area{position:absolute;left:auto;right:auto;bottom:10px;width:100%;height:100%;background: url('../upload/main/20Sep2022/menu.png') no-repeat center 0;
-		-webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: 90% 100%;
+	#content.home .section.store .bg-area{position:absolute;left:auto;right:auto;bottom:70px;width:100%;height:100%;background: url('../upload/main/20Sep2022/menu.png') no-repeat center 0;
+		-webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: 85% 100%;
 	}
 }
 
